--- a/01-pure-react/final/index.html
+++ b/01-pure-react/final/index.html
@@ -7,7 +7,7 @@
     <title>Hello React!</title>
   </head>
   <body>
-    <div id="root"><h1>hellos hihihihih</h1></div>
+    <div id="root"><h1>hellos</h1></div>
 
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"
